<resources>
    <string name="app_name">BookVault</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome page title</string>
    <string name="login_image">Login Image</string>

</resources>